--- a/src/too/sistemadeventasBundle/Resources/views/Admin/nuevoProducto.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/nuevoProducto.html.twig
@@ -64,6 +64,25 @@
                                     <label><span>Precio Unitario*</span></label>
                                     <input type="text" required name="precio">
                                 </li>
+                                <li>
+                                    <h3>INVENTARIO INICIAL</h3>
+                                </li>
+                                <li>
+                                    <label><span>Cantidad Minima*</span></label>
+                                    <input type="text" required name="minima">
+                                </li>
+                                <li>
+                                    <label><span>Cantidad Maxima*</span></label>
+                                    <input type="text" required name="maxima">
+                                </li>
+                                <li>
+                                    <label><span>Cantidad Disponible*</span></label>
+                                    <input type="text" required name="disponible">
+                                </li>
+                                <li>
+                                    <label><span>Costo del Producto*</span></label>
+                                    <input type="text" required name="costo">
+                                </li>
                             </ul>
                             <div class="clearfix"> </div>
                             <button type="submit">Agregar</button>
