--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/carrito.html.twig
@@ -72,6 +72,14 @@
                         <a href="{{ path('factura') }}" title="Agregar" class="btn btn-primary">Comprar</a></td>
                 </tr>
         </table>
+        <br>
+        <br>
+        {% if carrito == null %}
+        <br>
+
+            <br>
+            <br>
+        {% endif %}
     </div>
 </div>
 
