--- a/src/too/sistemadeventasBundle/Resources/views/Sistema/registro.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Sistema/registro.html.twig
@@ -49,6 +49,18 @@
                                     <label><span>Contraseña*</span></label>
                                     <input type="password" required name="pass">
                                 </li>
+                                <li>
+                                    <label><span>Telefono*</span></label>
+                                    <input type="text"  required name="telefono">
+                                </li>
+                                <li>
+                                    <label><span>Pais*</span></label>
+                                    <input type="text"  required name="pais">
+                                </li>
+                                <li>
+                                    <label><span>Codigo Postal*</span></label>
+                                    <input type="text"  required name="postal">
+                                </li>
                             </ul>
                             <div class="clearfix"> </div>
                             <button type="submit">Registrar</button>
