--- a/src/too/sistemadeventasBundle/Resources/views/Admin/crudAdmin.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/crudAdmin.html.twig
@@ -1,7 +1,9 @@
 {% extends '::baseAdmin.html.twig' %}
 {% block title %}Usuarios!!{% endblock %}
 {% block active3 %}class="active"{% endblock active3 %}
+
 {% block body %}
+
     {% for flashMessage in app.session.flashbag.get('credencial') %}
         <script>
             window.onload = function error(){
@@ -27,9 +29,6 @@
             </li>
             <li>
                 <a href="{{ path('crudUsuarios') }}">Usuarios</a>
-            </li>
-            <li>
-                <a href="{{ path('crudClientes') }}">Clientes</a>
             </li>
 
             <li class="active">Administradores</li>
@@ -67,7 +66,7 @@
                     <td style="text-align: center;">
                         <a href="{{ asset('app_dev.php/editarAdmin') }}/{{ admin.idUsuario }}" title="Editar" class="btn btn-default" style="background: #0AA5E2;color: #ffffff;">Editar</a>
                         -
-                        <a href="{{ asset('app_dev.php/deleteAdmin') }}/{{ admin.idUsuario }}" title="Eliminar" class="btn btn-danger">Eliminar</a>
+                        <input class="btn btn-danger" type="button" value="Eliminar" onClick="confirmar()" />
                     </td>
                 </tr>
             {% endfor %}
@@ -75,5 +74,28 @@
         </table>
     </div>
 </div>
+    {% for admin in admin %}
+    <script>
 
+        function alerta(){
+            //un alert
+            alertify.alert("<b>Blog Reaccion Estudio</b> probando Alertify", function () {
+                //aqui introducimos lo que haremos tras cerrar la alerta.
+                //por ejemplo -->  location.href = 'http://www.google.es/';  <-- Redireccionamos a GOOGLE.
+            });
+        }
+
+        function confirmar(){
+            //un confirm
+            alertify.confirm("<p>Esta seguro de eliminar el registro.<br><br><b>ENTER</b> y <b>ESC</b> corresponden a <b>Aceptar</b> o <b>Cancelar</b></p>", function (e) {
+                if (e) {
+                    location.href="{{ asset('app_dev.php/deleteAdmin') }}/{{ admin.idUsuario }}";
+                } else { alertify.error("Has cancelado la operacion");
+                }
+            });
+            return false
+        }
+
+    </script>
+ {% endfor %}
 {% endblock body %}
