--- a/src/too/sistemadeventasBundle/Resources/views/Admin/editarRegistroUsu.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/editarRegistroUsu.html.twig
@@ -9,9 +9,7 @@
                 <li>
                     <a href="{{ path('allUsuarios') }}">Todos</a>
                 </li>
-                <li>
-                    <a href="{{ path('crudClientes') }}">Clientes</a>
-                </li>
+
                 <li>
                     <a href="{{ path('crudAdmin') }}">Administradores</a>
                 </li>
@@ -40,7 +38,7 @@
 
                                 <li>
                                     <label><span>Nombres*</span></label>
-                                    <input type="text" value="{{ datos.nombreUsu }}" required name="nombre">
+                                    <input type="text" value="{{ datos.nombreUsu }}" required name="nombre" >
                                 </li>
                                 <li>
                                     <label><span>Apellidos*</span></label>
@@ -48,11 +46,11 @@
                                 </li>
                                 <li>
                                     <label><span>Email*</span></label>
-                                    <input type="email" value="{{ datos.correo }}" required name="email">
+                                    <input type="email" value="{{ datos.correo }}" required name="email" readonly>
                                 </li>
                                 <li>
                                     <label> <span>Usuario*</span></label>
-                                    <input type="text" value="{{ datos.usuario }}" required name="usuario">
+                                    <input type="text" value="{{ datos.usuario }}" required name="usuario" readonly>
                                 </li>
                                 <li>
                                     <label><span>Contraseña*</span></label>
