--- a/src/too/sistemadeventasBundle/Resources/views/Admin/devoluciones.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/devoluciones.html.twig
@@ -27,9 +27,9 @@
             {% for devol in devoluciones %}
                 <tr>
                     <td>{{ devol.idDevolucion }}</td>
-                    <td>{{ devol.idVenta }}</td>
+                    <td>{{ devol.idVenta.idVenta }}</td>
                     <td>{{ devol.descripcionDev }}</td>
-                    <td></td>
+                    <td>{{ devol.fechaDev.format("Y-m-d") }}</td>
 
                 </tr>
             {% endfor %}
