--- a/src/too/sistemadeventasBundle/Resources/views/Admin/reportes.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/reportes.html.twig
@@ -9,9 +9,13 @@
 
         <hr/>
         <div style=" width: 300px;; margin: 0 auto 0 auto; text-align: center;">
-            <a href="{{ path('reporteClientes') }}" title="Reporte" class="btn btn-default" style="background: #0AA5E2;color: #ffffff;">Generar Reporte de Clientes</a>
+            <a href="{{ path('reporteClientes') }}" title="Reporte" class="btn btn-default" style="background: #AAA501;color: #ffffff; height: 50px; width: 300px;">Generar Reporte de Clientes</a>
             <br><br>
-            <a href="#" title="Reporte" class="btn btn-default" style="background: #0AA5E2;color: #ffffff;">Generar Reporte de Inventario</a>
+            <a href="{{ path('reporteExistencias') }}" title="Reporte" class="btn btn-default" style="background: #5FC902;color: #ffffff; height: 50px; width: 300px;">Generar Reporte de Inventario</a>
+            <br><br>
+            <a href="{{ path('reporteExistencias') }}" title="Reporte" class="btn btn-default" style="background: #BF3A01;color: #ffffff; height: 50px; width: 300px;">Generar Reporte de Devoluciones</a>
+            <br><br>
+            <a href="{{ path('reporteVentas') }}" title="Reporte" class="btn btn-default" style="background: #0186AA;color: #ffffff; height: 50px; width: 300px;">Generar Reporte de Ventas</a>
         </div>
        </div>
     <br>
