--- a/src/too/sistemadeventasBundle/Resources/views/Admin/ventas.html.twig
+++ b/src/too/sistemadeventasBundle/Resources/views/Admin/ventas.html.twig
@@ -20,7 +20,7 @@
                 Producto
             </th>
             <th>
-                Id_Cliente
+                Cliente
             </th>
             <th>
                 Fecha
