Darse de baja en User

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -88,6 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         <li {% block active3 %}{% endblock active3 %}><a href="{{ path('catalogo') }}" >CATÁLOGO</a></li>
                         {% if user %} <li {% block active4 %}{% endblock active4 %}><a href="{{ path('carrito') }}" >CARRITO</a></li>{% endif %}
                         {% if user %} <li {% block active5 %}{% endblock active5 %}><a href="{{ path('compras') }}" >COMPRAS</a></li>{% endif %}
+                        {% if user %} <li {% block active6 %}{% endblock active6 %}><a href="{{ path('config') }}" >CONFIGURACION</a></li>{% endif %}
                     </ul>
                     <script>
                         $("span.menu").click(function(){
